# parsermax_bot_

./: .gitignore  ARCHITECTURE.md  README.md
docs/: DEPLOY.md  MAX_BOT_SETUP.md  TELEGRAM_BOT_SETUP.md  TG_SESSION.md
nextjs-bot/: .env.example  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
nextjs-bot/scripts/: check-config.mjs  check-token.mjs  setup-webhook.mjs  webhook-info.mjs
nextjs-bot/src/app/: layout.tsx  page.tsx
nextjs-bot/src/app/api/bot/setup/: route.ts
nextjs-bot/src/app/api/bot/webhook/: route.ts
nextjs-bot/src/app/api/cron/digest/: route.ts
nextjs-bot/src/app/api/cron/health/: route.ts
nextjs-bot/src/app/api/cron/scrape/: route.ts
nextjs-bot/src/app/api/search/instant/: route.ts
nextjs-bot/src/lib/: aiProcessor.ts  config.ts  db.ts  formatter.ts  max.ts  rateLimit.ts  searchEngine.ts  telegram.ts  types.ts  utils.ts
nextjs-bot/src/lib/bot/: callbacks.ts  commands.ts  context.ts  menu.ts  router.ts
nextjs-bot/src/lib/core/: dedupe.ts  query.ts
nextjs-bot/src/lib/services/: lastQuery.ts  pending.ts  searchPipeline.ts  subscriptions.ts  userPrefs.ts
nextjs-bot/src/lib/sources/: googleNewsRss.ts  hackerNews.ts  reddit.ts  registry.ts  rssFeeds.ts  telegramWeb.ts  telegramWorker.ts  types.ts  youtubeRss.ts
tg-worker/: .env.example  Dockerfile  pyproject.toml  railway.toml
tg-worker/app/: main.py  middleware.py  telethon_client.py
tg-worker/scripts/: get_session.py
